# DRL-MFSS

Result_Valification_CPLEX/: CMakeLists.txt  ReadMe.md
Result_Valification_CPLEX/Final_Results/: All_Best_Found_Results_Cplex_withGaps.csv  All_Best_Found_Results_RLMFSS_ClassicBenchmarks_600s_train500.csv
Result_Valification_CPLEX/Instances/CF/1000/: 01_id_401_objs_1000_size_3000_sets_6000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_4053.txt  05_id_405_objs_1000_size_3000_sets_6000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_4382.txt  07_id_407_objs_1000_size_3000_sets_6000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_4830.txt  10_id_410_objs_1000_size_3000_sets_6000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_2952.txt
Result_Valification_CPLEX/Instances/CF/1500/: 05_id_405_objs_1500_size_4500_sets_9000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_7981.txt
Result_Valification_CPLEX/Instances/CF/2000/: 01_id_401_objs_2000_size_6000_sets_12000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_8722.txt  02_id_402_objs_2000_size_6000_sets_12000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_8029.txt  07_id_407_objs_2000_size_6000_sets_12000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_3056.txt  08_id_408_objs_2000_size_6000_sets_12000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_6474.txt
Result_Valification_CPLEX/Instances/CF/500/: 02_id_402_objs_500_size_1500_sets_3000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_1825.txt  04_id_404_objs_500_size_1500_sets_3000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_7046.txt  05_id_405_objs_500_size_1500_sets_3000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_6841.txt  07_id_407_objs_500_size_1500_sets_3000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_5377.txt  08_id_408_objs_500_size_1500_sets_3000_maxNumConflicts_2_CostRatio_0.10_0.40_seme_2091.txt  (+1 more)
Result_Valification_CPLEX/src/: CPLEX_Validation.cpp  Instances.cpp  Instances.h  ParamsUtils.cpp  ParamsUtils.h
(+179 files in other folders)
